--- a/Codigo/gallery.html
+++ b/Codigo/gallery.html
@@ -167,6 +167,7 @@
     <div>
       <h6 id="footer-h6_style">Lorem company copyright © 2020   /   Lorem Company S.L Se reserva todos los derechos</h6>
     </div>
+    </div>
   </footer>
 <!--JS-separate-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
