--- a/Codigo/contact.html
+++ b/Codigo/contact.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="../CSS/style.css">
 </head>
-<body>
+<body id="body-bg-contact_colour">
   <header>
     <nav class="navbar navbar-expand-lg navbar-bg_color navbar-dark">
     <div class="container-fluid">
@@ -41,6 +41,55 @@
   </nav>
   </header>
   <!-------------------------------------------------------------------------------->
+  <div class="container">
+    <div class="row">
+      <div class="card col-md-4 contact-card_style">
+        <div class="card-body">
+          <h5 class="card-title">Sop. Tecnico</h5>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item list-group-item_bg">Lunes a Viernes</li>
+          <li class="list-group-item list-group-item_bg">9:30Hs a 18:00Hs</li>
+          <li class="list-group-item list-group-item_bg">Tel: 01156246794</li>
+        </ul>
+        <div class="card-body">
+          <a href="https://goo.gl/maps/9kM12EQxaWyFNFiu6" class="card-link card-link_colour">Localización</a>
+        </div>
+      </div>
+      <div class="card col-md-4 contact-card_style">
+        <div class="card-body">
+          <h5 class="card-title">Lorem</h5>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item list-group-item_bg">Lunes a Viernes</li>
+          <li class="list-group-item list-group-item_bg">9:30Hs a 18:00Hs</li>
+          <li class="list-group-item list-group-item_bg">Tel: 01156246794</li>
+        </ul>
+        <div class="card-body">
+          <a href="https://goo.gl/maps/9kM12EQxaWyFNFiu6" class="card-link card-link_colour">Localización</a>
+        </div>
+      </div>
+      <div class="card col-md-4 contact-card_style">
+        <div class="card-body">
+          <h5 class="card-title">Desarrollador</h5>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item list-group-item_bg">Lunes a Lunes</li>
+          <li class="list-group-item list-group-item_bg">9:30Hs a 21:00Hs</li>
+          <li class="list-group-item list-group-item_bg">Tel: 01156246794</li>
+        </ul>
+        <div class="card-body">
+          <a href="https://goo.gl/maps/9kM12EQxaWyFNFiu6" class="card-link card-link_colour">Localización</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      
+    </div>
+  </div>
+  <!--------------------------------------------------------------------------->
     <!--footer-->
     <footer class="footer_body-bg">
       <div class="container" id="footer-conteiner_size">
